--- a/public/css/app.css
+++ b/public/css/app.css
@@ -10683,3 +10683,42 @@ strong {
   display: inline;
 }
 
+.vote-controls {
+  min-width: 60px;
+  margin-right: 30px;
+  text-align: center;
+  color: #495057;
+}
+
+span,
+a {
+  display: block;
+}
+
+span.votes-count {
+  font-size: 25px;
+}
+
+span.favorites-count {
+  font-size: 12px;
+}
+
+a {
+  cursor: pointer;
+  color: #6c757d;
+}
+
+a.off,
+a.off:hover {
+  color: #adb5bd !important;
+}
+
+a.favorite.favorited,
+a.favorite.favorited:hover {
+  color: #ffc107;
+}
+
+a.vote-accepted {
+  color: #5fbb7e !important;
+}
+
